[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flatone"
version = "0.1.0"
description = "A commandline tool to flatten one EW2 neuron automatically."
authors = []
requires-python = ">=3.10.0"
dependencies = [
    "caveclient>=7.8.0",
    "cloud-volume>=12.3.1",
    "pywarper[scikit-sparse]>=0.1.9",
    "skeliner>=0.1.3",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "twine",
    "maturin",
    "ipykernel>=6.29.5",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true


[project.scripts]
flatone = "flatone.cli:main"

